# UnBForumBack

./: .env.local  Dockerfile  Procfile  README.md  docker-compose-test.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
migrations/: env.py
migrations/versions/: 5c9c06154bc2_upgrade_foreign_key_constraints.py  98057ab44a65_create_all_project_tables.py  b7cffdc02838_update_migrations.py  c6cbb251c3ff_seed_tags.py  cdaa48357a15_update_user_constraint_on_topic_and_.py  d8c06e9915c4_add_users_and_tags_tables.py  db7c4fb4eeba_create_user_rates_comment_table.py
scripts/: run_tests.sh
src/: main.py
src/db/: connection.py  database.py  models.py
src/routers/: __init__.py  auth.py  category.py  comment.py  deps.py  file.py  tag.py  topic.py  user.py
src/routes/: deps.py  user.py
src/schemas/: category.py  comment.py  file.py  tag.py  topic.py  user.py
src/utils/: enumerations.py  graph.py  jwt.py
tests/: conftest.py
tests/features/auth/: login.feature  test_login.feature
tests/features/category/: test_create_category.feature
tests/features/comment/: create_comment.feature  delete_comment.feature  edit_comment.feature  fix_comment.feature  rates_comment.feature
tests/features/topic/: create_topic.feature  delete_topic.feature  edit_topic.feature  fix_topic.feature  rates_topic.feature  save_topic.feature  test_create_topic.feature
tests/features/user/: create_user.feature  current_user.feature  test_create_user.feature
tests/steps/auth/: test_login.py
tests/steps/category/: test_create_category.py
(+11 files in other folders)
